--- a/public/styles.css
+++ b/public/styles.css
@@ -24,3 +24,11 @@ input{
   margin-top: 10px;
   display: block;
 }
+#title{
+  width: 400px;
+  height: 70px;
+  font-size: 50px;
+  padding: 10px;
+  margin: 30px auto;
+  text-align: center;
+}
